# DRF_Dogs

./: .env-sample  Dockerfile  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
data/: dogs.json  dogs_data.json  users_data.json
dogs/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
dogs/migrations/: 0001_initial.py  0002_breed_owner_dog_owner.py  0003_dog_like.py  0004_rename_like_dog_likes.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_donation.py  0003_donation_tg_chat_id.py  0004_remove_donation_tg_chat_id_remove_user_tg_nick_and_more.py  0005_user_tg_nick.py
