[tool.poetry]
name = "drf-dogs"
version = "0.1.0"
description = ""
authors = ["TheShadowfish <shadowfish@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.2"
psycopg2 = "^2.9.9"
python-decouple = "^3.8"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"
django-filter = "^24.2"
djangorestframework-simplejwt = "^5.3.1"
ipython = "^8.26.0"
drf-yasg = "^1.21.7"
stripe = "^10.5.0"
forex-python = "^1.8"
celery = "^5.4.0"
redis = "^5.0.8"
django-celery-beat = "^2.6.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
